package entregas.oteroJorge.reto003;

public class BookTopic {

    private int bookId;
    private int topicId;

    public BookTopic(int bookId, int topicId) {
        this.bookId = bookId;
        this.topicId = topicId;
    }

    public int getBookId() {
        return bookId;
    }

    public int getTopicId() {
        return topicId;
    }
    
}
